--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "config": "^3.2.3",
     "koa": "^2.10.0",
     "koa-body": "^4.1.1",
+    "koa-prerender": "^1.0.3",
     "mongoose": "^5.7.6",
-    "pkg": "^4.4.0"
+    "pkg": "^4.4.0",
+    "prerender": "^5.6.0"
   }
 }
